Prototypy klas dla trawersowania oraz niedeterminizmu.

--- a/build.xml
+++ b/build.xml
@@ -28,6 +28,9 @@
     <copy includeemptydirs="false" todir="${build.dir}">
       <fileset dir="${src.dir}" excludes="**/*.java" />
     </copy>
+  </target>
+
+  <target name="init-test" depends="init">
     <copy includeemptydirs="false" todir="${build.dir}">
       <fileset dir="${test.dir}" excludes="**/*.java" />
     </copy>
@@ -42,7 +45,7 @@
     </javac>
   </target>
 
-  <target name="build-test" depends="init">
+  <target name="build-test" depends="init-test">
     <javac source="${source}" target="${target}" debug="true" debuglevel="${debuglevel}"
            destdir="${build.dir}" includeantruntime="false">
       <src path="${src.dir}" />
