--- a/build.xml
+++ b/build.xml
@@ -11,13 +11,16 @@
   <property name="source" value="1.8" />
 
   <path id="JUnit4.libraryclasspath">
-    <pathelement location="/usr/share/java/hamcrest-core.jar" />
-    <pathelement location="/usr/share/java/junit4.jar" />
+    <!--=pathelement location="/usr/share/java/hamcrest-core.jar" /-->
+    <pathelement location="/usr/share/java/hamcrest-core-1.3.jar" />
+    <!--pathelement location="/usr/share/java/junit4.jar" /-->
+    <pathelement location="/usr/share/java/junit4-4.12.jar" />
   </path>
   <path id="Mockito_PowerMock.libraryclasspath">
     <pathelement location="/usr/share/java/cglib-nodep-2.2.2.jar" />
     <pathelement location="/usr/share/java/javassist-3.21.0-GA.jar" />
-    <pathelement location="/usr/share/java/mockito-core.jar" />
+    <!--pathelement location="/usr/share/java/mockito-core.jar" /-->
+    <pathelement location="/usr/share/java/mockito-core-1.10.19.jar" />
     <pathelement location="/usr/share/java/objenesis-2.4.jar" />
     <pathelement location="/usr/share/java/powermock-mockito-1.7.1-full.jar" />
   </path>
