Nowe cele w buildfile.

--- a/build.xml
+++ b/build.xml
@@ -62,10 +62,10 @@
       <manifest>
         <attribute name="Built-By" value="${vendor}" />
         <attribute name="Main-Class" value="ref_humbold.fita_view.FITAView" />
-        <attribute name="Specification-Title" value="Dependency Injection Container" />
+        <attribute name="Specification-Title" value="Finite and Infinite Tree Automata Viewer" />
         <attribute name="Specification-Version" value="${version}" />
         <attribute name="Specification-Vendor" value="${vendor}" />
-        <attribute name="Implementation-Title" value="ref_humbold.di_container" />
+        <attribute name="Implementation-Title" value="FITA-View" />
         <attribute name="Implementation-Verion" value="${version}-build${build.number}" />
         <attribute name="Implementation-Vendor" value="${vendor}" />
       </manifest>
