--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="FITA-View" basedir="." default="all">
+<project xmlns:ivy="antlib:org.apache.ivy.ant" name="FITA-View" basedir="." default="all">
   <property name="vendor" value="Rafał Kaleta" />
   <property name="major.version" value="1" />
   <property name="minor.version" value="0" />
@@ -9,34 +9,38 @@
   <property name="junit.output.dir" value="junit_results" />
   <property name="junit.report.dir" value="junit_reports" />
   <property name="javadoc.output.dir" value="docs" />
+  <property name="ivy.lib.dir" value="lib" />
+  <property name="ivy.install.version" value="2.4.0" />
   <property name="debuglevel" value="source,lines,vars" />
   <property name="target" value="1.8" />
   <property name="source" value="1.8" />
 
-  <path id="JUnit4.libraryclasspath">
-    <!--=pathelement location="/usr/share/java/hamcrest-core.jar" /-->
-    <pathelement location="/usr/share/java/hamcrest-core-1.3.jar" />
-    <!--pathelement location="/usr/share/java/junit4.jar" /-->
-    <pathelement location="/usr/share/java/junit4-4.12.jar" />
-  </path>
-  <path id="Mockito_PowerMock.libraryclasspath">
-    <pathelement location="/usr/share/java/cglib-nodep-2.2.2.jar" />
-    <pathelement location="/usr/share/java/javassist-3.21.0-GA.jar" />
-    <!--pathelement location="/usr/share/java/mockito-core.jar" /-->
-    <pathelement location="/usr/share/java/mockito-core-1.10.19.jar" />
-    <pathelement location="/usr/share/java/objenesis-2.4.jar" />
-    <pathelement location="/usr/share/java/powermock-mockito-1.7.1-full.jar" />
-  </path>
   <path id="FITA-View.classpath">
+    <fileset dir="${ivy.lib.dir}" includes="*.jar" />
     <pathelement location="${build.dir}" />
   </path>
-  <path id="FITA-View_test.classpath">
-    <path refid="JUnit4.libraryclasspath" />
-    <path refid="Mockito_PowerMock.libraryclasspath" />
-    <path refid="FITA-View.classpath" />
-  </path>
+
+  <target name="download-ivy" unless="offline">
+    <mkdir dir="${ivy.lib.dir}" />
+    <get
+      src="https://repo1.maven.org/maven2/org/apache/ivy/ivy/${ivy.install.version}/ivy-${ivy.install.version}.jar"
+      dest="${ivy.lib.dir}/ivy.jar" usetimestamp="true" />
+  </target>
+
+  <target name="init-ivy" depends="download-ivy">
+    <path id="ivy.lib.path">
+      <fileset dir="${ivy.lib.dir}" includes="*.jar" />
+    </path>
+    <taskdef resource="org/apache/ivy/ant/antlib.xml" uri="antlib:org.apache.ivy.ant"
+             classpathref="ivy.lib.path" />
+  </target>
+
+  <target name="resolve" depends="init-ivy">
+    <ivy:retrieve />
+  </target>
 
   <target name="clean">
+    <delete dir="${ivy.lib.dir}" />
     <delete dir="${build.dir}" />
   </target>
 
@@ -47,18 +51,17 @@
     </copy>
   </target>
 
-  <target name="build" depends="init">
+  <target name="build" depends="init, resolve">
     <javac source="${source}" target="${target}" debug="true" debuglevel="${debuglevel}"
            destdir="${build.dir}" includeantruntime="false">
       <src path="${src.dir}" />
       <src path="${test.dir}" />
       <compilerarg line="-Xlint" />
-      <classpath refid="FITA-View_test.classpath" />
+      <classpath refid="FITA-View.classpath" />
     </javac>
   </target>
 
   <target name="jar" depends="build">
-    <buildnumber />
     <jar destfile="fita_view.jar" basedir="${build.dir}" excludes="**/*Test.class">
       <manifest>
         <attribute name="Built-By" value="${vendor}" />
@@ -67,7 +70,7 @@
         <attribute name="Specification-Version" value="${major.version}" />
         <attribute name="Specification-Vendor" value="${vendor}" />
         <attribute name="Implementation-Title" value="ref_humbold.fita_view" />
-        <attribute name="Implementation-Verion" value="${major.version}.${minor.version}-b${build.number}" />
+        <attribute name="Implementation-Verion" value="${major.version}.${minor.version}" />
         <attribute name="Implementation-Vendor" value="${vendor}" />
       </manifest>
     </jar>
@@ -81,7 +84,7 @@
       <batchtest todir="${junit.output.dir}">
         <fileset dir="${test.dir}" includes="**/*Test.java" />
       </batchtest>
-      <classpath refid="FITA-View_test.classpath" />
+      <classpath refid="FITA-View.classpath" />
     </junit>
     <delete dir="${junit.report.dir}" />
     <mkdir dir="${junit.report.dir}" />
