--- a/build.xml
+++ b/build.xml
@@ -9,6 +9,7 @@
   <property name="junit.output.dir" value="junit_results" />
   <property name="junit.report.dir" value="junit_reports" />
   <property name="javadoc.output.dir" value="docs" />
+  <property name="main.package" value="refhumbold.fitaview" />
   <property name="ivy.lib.dir" value="lib" />
   <property name="ivy.install.version" value="2.4.0" />
   <property name="debuglevel" value="source,lines,vars" />
@@ -24,7 +25,7 @@
     <mkdir dir="${ivy.lib.dir}" />
     <get
       src="https://repo1.maven.org/maven2/org/apache/ivy/ivy/${ivy.install.version}/ivy-${ivy.install.version}.jar"
-      dest="${ivy.lib.dir}/ivy.jar" usetimestamp="true" />
+      dest="${ivy.lib.dir}/ivy-${ivy.install.version}.jar" usetimestamp="true" />
   </target>
 
   <target name="init-ivy" depends="download-ivy">
@@ -62,14 +63,16 @@
   </target>
 
   <target name="jar" depends="build">
-    <jar destfile="fitaview.jar" basedir="${build.dir}" excludes="**/*Test.class">
+    <delete file="fitaview-*.jar" />
+    <jar destfile="fitaview-${major.version}.${minor.version}.jar" basedir="${build.dir}"
+         excludes="**/*Test.class">
       <manifest>
         <attribute name="Built-By" value="${vendor}" />
-        <attribute name="Main-Class" value="ref_humbold.fita_view.FITAView" />
+        <attribute name="Main-Class" value="${main.package}.FITAView" />
         <attribute name="Specification-Title" value="Finite and Infinite Tree Automata Viewer" />
         <attribute name="Specification-Version" value="${major.version}" />
         <attribute name="Specification-Vendor" value="${vendor}" />
-        <attribute name="Implementation-Title" value="ref_humbold.fita_view" />
+        <attribute name="Implementation-Title" value="${main.package}" />
         <attribute name="Implementation-Verion" value="${major.version}.${minor.version}" />
         <attribute name="Implementation-Vendor" value="${vendor}" />
       </manifest>
@@ -98,7 +101,7 @@
     <delete dir="${javadoc.output.dir}" />
     <mkdir dir="${javadoc.output.dir}" />
     <javadoc sourcepath="${src.dir}" destdir="${javadoc.output.dir}" access="public">
-      <package name="refhumbold.fitaview.*" />
+      <package name="${main.package}.*" />
     </javadoc>
   </target>
 
