--- a/build.xml
+++ b/build.xml
@@ -23,7 +23,7 @@
   <property name="exec.file" value="FITA-View" />
 
   <property name="ivy.lib.dir" value="lib" />
-  <property name="ivy.install.version" value="2.4.0" />
+  <property name="ivy.install.version" value="2.5.0-rc1" />
 
   <property name="source.level" value="8" />
   <property name="target.level" value="8" />
@@ -91,10 +91,10 @@
   </target>
 
   <target name="execfile" depends="jar">
-    <echo level="info" message="Building file: ${basedir}/${exec.file}" />
+    <echo level="info" message="Building file: ${dist.dir}/${exec.file}" />
     <echo file="${dist.dir}/${exec.file}"
           message="#! /bin/sh${line.separator}${line.separator}java -jar $(dirname $0)/${jar.file} $@" />
-    <chmod file="${exec.file}" perm="+x" />
+    <chmod file="${dist.dir}/${exec.file}" perm="+x" />
   </target>
 
   <target name="test">
