--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,22 @@
 # [ Java ]
-# Java, Apache ANT output
-bin
-dist
+# Java / Apache ANT output
+bin/
+dist/
 
 # Javadoc output
-docs
+docs/
 
 # JUnit output
-junit
+junit/
 
 # Apache Ivy dependencies
-lib
+lib/
 
 # IntelliJ IDEA
 .idea
-out
+out/
 
-# [ Visual Paradigm ]
-# backup files
+# [ UML ]
+# Visual Paradigm backup files
 UML/*.bak*
 UML/*.vbak*
